--- a/css/main.css
+++ b/css/main.css
@@ -97,8 +97,9 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #000000;
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -120,12 +121,16 @@ body {
   color: #fff;
   line-height: 1.5em;
   font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  background-color: #000000;
   display: flex;
   width: 30%;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
+  padding: 10px;
+}
+.div-2 {
+  border-left: 3px #fff;
+  border-right: 3px #fff;
 }
 
 
